# MISW4406-AlpesPartners

./: README.md  alpesPartners.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
collections/: MISW4406 - Diseño y construcción de soluciones no monolíticas.postman_collection.json
proyecto/: Makefile  POSTMAN_TESTING.md  README.md  docker-compose.yml  generate_test_data.py  newman-config.json  package.json  start.sh  test_flow.sh
proyecto/afiliaciones/: main.py
proyecto/afiliaciones/aplicacion/: dto.py
proyecto/afiliaciones/dominio/: servicios.py
proyecto/afiliaciones/infraestructura/: consumidores.py  despachadores.py
proyecto/influencer/: main.py
proyecto/influencer/infraestructura/: consumidores.py
proyecto/marca/: main.py
proyecto/marca/dominio/: entidades.py
proyecto/marca/infraestructura/: consumidores.py
proyecto/tracking/: main.py
proyecto/tracking/dominio/: entidades.py
proyecto/tracking/infraestructura/: consumidores.py  repositorios.py
src/aeroalpes/api/: vuelos.py
src/alpesPartners/: Dockerfile
src/alpesPartners/api/: __init__.py  cliente.py  marca.py  vuelos.py
src/alpesPartners/config/: uow.py
src/alpesPartners/ejemplos/: servicio_busqueda.py  servicios.py
src/alpesPartners/seedwork/infraestructura/: uow.py
src/alpespartners/: Dockerfile  requirements.txt
src/alpespartners/api/: __init__.py  afiliaciones.py
src/alpespartners/seedwork/dominio/: entidades.py
src/notificaciones/: Dockerfile  main.py
tests/unit/api/: test_api.py
tests/unit/seedwork/dominio/: test_entidades.py  test_excepciones.py  (+4 more)
(+84 files in other folders)
